# arc-citadel

./: .gitignore  12.txt  CLAUDE.md  Cargo.toml  simulation_output.json  skeleton_raw.txt  twostage_results.json
.claude/commands/: optimize-gameplay.md  optimize.md
data/: actions.json  body_parts.json  config.json  needs.json  recipes.toml
data/ai_personalities/: aggressive.toml  cautious.toml  cunning.toml  default.toml  easy.toml  hard.toml
data/gameplay_optimization/: README.md  changelog.json
data/gameplay_optimization/tools/: compiled_proposer.json  pyproject.toml
data/gameplay_optimization/tools/src/opt_gameplay/: __init__.py  cli.py  evaluator.py  learner.py  proposer.py  schema.py
data/prompts/: geometry_details.txt  geometry_generation.txt  geometry_skeleton.txt
data/species/: human.json
docs/analysis/: 2026-01-02-species-system-analysis.md  mvp-analysis.md
docs/plans/: 02-aggregate-history-simulation.md  2025-12-31-arc-citadel-mvp.md  2025-12-31-documentation-system.md  2026-01-01-action-execution.md  2026-01-01-hierarchical-polity-system.md  (+40 more)
examples/: run_history.rs  species_demo.rs
species/: centaur.toml  demon_llm.toml  dryad.toml  elemental_llm.toml  fey_llm.toml  giant_llm.toml  gnoll.toml  goblin_v2.toml  golem_llm.toml  harpy.toml  hobgoblin.toml  human.toml  kobold.toml  lizardfolk.toml  merfolk_llm.toml  minotaur.toml  naga_llm.toml  ogre.toml  orc.toml  satyr.toml  troll_v2.toml  undead_llm.toml  vampire_llm.toml  werewolf_llm.toml
src/: lib.rs  main.rs
tests/: battle_integration.rs  blueprint_integration.rs  city_integration.rs  combat_integration.rs  emergence_tests.rs  geometry_schema_tests.rs  hierarchy_integration.rs  population_integration.rs  skill_action_integration.rs  skill_differentiation.rs  skill_spawn_loadouts.rs  skills_integration.rs  world_objects_integration.rs
worldgen/: .gitignore  README.md  __init__.py  adjacency.py  anchor_placer.py  batch_runner.py  cli.py  cluster_generator.py  config.py  connector_generator.py  edge_handler.py  filler_generator.py  fix_constraints.py  hex_coords.py  hex_generator.py  placement_generator.py  placements.json  placements_deepseek.json  placements_sample.json  pyproject.toml  requirements.txt  scale_validator.py  schemas.py  tagged_world.json  test_world.json  validator.py
worldgen/assembly/: __init__.py  assembler.py  layout_solver.py
worldgen/generation/: __init__.py  constrained_generator.py  constraints.py  context_constraints.toml  hex_tags.toml  llm_client.py  quality_loop.py  test_quality_vs_validity.py  test_structural_validity.py
worldgen/generation/prompts/: scoring.txt
worldgen/prompts/: hex_prompt.txt
worldgen/schemas/: __init__.py  base.py  component.py  connector.py  minor.py  seed.py  tagged.py  template.py  world.py
worldgen/seeds/: __init__.py  seed_generator.py
worldgen/storage/: __init__.py  database.py
worldgen/templates/: __init__.py  template_loader.py
worldgen/templates/dwarf/: hold_major.yaml
worldgen/tests/: __init__.py  test_adjacency.py  test_assembly.py  test_cli.py  test_cluster_20.py  test_cluster_generator.py  test_component_schema.py  test_database.py  test_edge_handler.py  test_generation.py  test_hex_coords.py  test_integration.py  test_scale_validator.py  test_schemas.py  test_seeds.py  test_tagged_hex.py  test_templates.py
worldgen/worldgen.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+333 files in other folders)
