[package]
name = "arc-citadel"
version = "0.1.0"
edition = "2021"
authors = ["Arc Citadel Team"]
description = "Deep simulation strategy game with natural language commands"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_chacha = "0.3"
ordered-float = "4.2"
uuid = { version = "1.6", features = ["v4", "serde"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossterm = "0.27"
ratatui = "0.25"
ahash = { version = "0.8", features = ["serde"] }
toml = "0.8"
thiserror = "1.0"
derive_more = "0.99"
rayon = "1.11.0"
# Graphics (wgpu-based renderer)
wgpu = "0.19"
winit = "0.29"
bytemuck = { version = "1.14", features = ["derive"] }

# UI overlay (0.27.x compatible with wgpu 0.19)
egui = "0.27"
egui-wgpu = "0.27"
egui-winit = "0.27"
pollster = "0.3"
glam = "0.25"
image = "0.24"
nom = "8"
clap = { version = "4.4", features = ["derive"] }
geo = "0.28"
geo-types = "0.7"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

# Benchmark will be added after core implementation
# [[bench]]
# name = "simulation_bench"
# harness = false
